style.css
h1, h2, h3, h4, h5, h6 {
  font-family: 'Caveat', cursive;
}

h2 {
  font-size: 72px;
}

.card {
  margin-top: 1em;
}

.card-body {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.card-body a {
  width: fit-content;
  margin-top: 1em;
}

.carousel-item img {
  object-fit: cover;
  width: 100%;
}

.hero {
  max-height: calc(100vh -90px)!important;
}

main {
  height: 100%;
}

.parallax {
  background-image: url("img/Nova-3.jpg");
  max-height: calc(100vh - 90px);
  height: 1000px;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}

.image-aside {
  font-size: 24px;
}

.image-aside img {
  height: 500px;
  object-fit: cover;
}

.image-aside-text {
 display: flex;
 flex-direction: column;
 justify-content: center;
 position: relative;
 text-shadow: 1px 1px 2px  lightgrey;
}

body {
  background-image: url(img/dog-house.svg);
  position: relative;
}
body::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(255,255,255,0.8);
}

footer {
  position: relative;
  background-color: antiquewhite;
  margin-top: 1em;
}

footer ul {
  list-style-type: none;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

footer li {
  margin: 8px;
}

footer img {
  border-radius: 8px;
  max-height: 40px;
}

footer i {
  font-size: 44px;
}

.card-container {
  max-width: 1200px;
  margin: 0 auto;
}

.footer-inner {
  display: flex;
  max-width: 1200px;
  width: 100%;
  justify-content: space-between;
  align-items: center;
  margin: 1em auto;
}

#qualifications {
  max-width: 1200px;
  margin: 0 auto;
  justify-content: space-around;
}

.qualifications-cards {
  padding: 1em;
}

